--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@ html, body {
 }
 
 body {
-  background: url(../images/backgrounds/architecture.jpg) center no-repeat;
+  background:center no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Cambria,'Times New Roman', serif;
   font-size: 100%;
+  
 }
 
 .wrapper {
@@ -21,12 +22,12 @@ body {
 
 #content {
   padding: 20px;
-  background: rgba(255,255,255,.85);
+  background: rgba(75, 74, 74, 0.447);
 }
 
 h1, h2 {
-  font-family: 'Gabriela', serif;
-  color: #fff;
+  font-family: 'Cambria', serif;
+  color: #ff25ff;
 }
 
 h1 {
@@ -40,7 +41,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'Gabriela', serif;
+  font-family: 'Times New Roman', serif;
   font-size: 1.5em;
   margin-top: .5em;
 }
@@ -56,8 +57,8 @@ p {
 }
 
 a {
-  color: black;
-  text-decoration: none;
+  color: rgb(248, 245, 245);
+  text-decoration: dotted;
 }
 
 a:hover {
